[project]
name = "mlh-api-week-flask-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "gunicorn>=23.0.0",
    "requests>=2.32.5",
    "authlib>=1.2.0",
    "python-dotenv>=1.0.0",
    "openfga_sdk>=0.1.0",
]
